--- a/Week1/Week 1.ipynb
+++ b/Week1/Week 1.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python tutorial website:\n",
+    "<br>\n",
+    "https://www.learnpython.org/\n",
+    "<br>\n",
+    "https://www.datacamp.com/home"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The Python Programming Language: Functions"
    ]
   },
@@ -325,6 +336,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python function to multiply all the numbers in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply(numbers):  \n",
+    "\n",
+    "    return \"the answer\"\n",
+    "\n",
+    "print(multiply((8, 2, 3, -1, 7)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>\n",
     "# The Python Programming Language: Strings"
    ]
@@ -487,9 +525,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = {'Harry Kane': 5, 'Cristiano Ronaldo': 4}\n",
     "x['Cristiano Ronaldo'] # Retrieve a value by using the indexing operator\n"
@@ -497,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +712,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python program to combine values in python list of dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "item_list = [{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount': 300}, {'item': 'item1', 'amount': 750}]\n",
+    "result = Counter()\n",
+    "# ...\n",
+    "    \n",
+    "print(result) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# World Cup 2018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.fifa.com/worldcup/ <br>\n",
+    "https://sports.now.com/home/worldcup2018/home"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fancy Prediction <br>\n",
+    "* Prediction = Germany - https://www.kdnuggets.com/2018/06/football-world-cup-predictions.html <br>\n",
+    "* Prediction = Germany - http://www.businessinsider.com/who-will-win-the-world-cup-2018-2018-5 from UBS <br>\n",
+    "* 2018-06-11 - World Cup 2018: Goldman Sachs predicts Brazil will get revenge against Germany <br>\n",
+    "https://www.cnbc.com/2018/06/11/goldman-sachs-predicts-brazil-will-get-world-cup-revenge-against-germany.html <br>\n",
+    "* 2018-07-04 - FIFA World Cup 2018: Goldman Sachs predicts new World Cup winner <br>\n",
+    "https://www.moneycontrol.com/news/trends/sports-trends/fifa-world-cup-2018-goldman-sachs-predicts-new-world-cup-winner-2666911.html <br>\n",
+    "* 2018-07-09 - Goldman Sachs once again changes its World Cup predictions — and is now forecasting a Belgium-England final <br>\n",
+    "http://www.businessinsider.com/world-cup-predictions-goldman-sachs-ai-model-belgium-england-final <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset in Kaggle <br>\n",
+    "https://www.kaggle.com/agostontorok/soccer-world-cup-2018-winner/data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>\n",
     "# Reading and Writing CSV files"
    ]
@@ -688,14 +803,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "\n",
-    "%precision 2\n",
     "\n",
     "with open('results_sample2018.csv') as csvfile:\n",
     "    d_results = list(csv.DictReader(csvfile))\n",
@@ -946,7 +1057,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python program to subtract five days from current date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Competition, For training your data science skills\n",
     "<br>\n",
+    "http://www.kaggle.com\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "# Python 102 (Go through the following if we have time)\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The Python Programming Language: Objects and map()"
    ]
   },
